--- a/dashboard.html
+++ b/dashboard.html
@@ -391,45 +391,27 @@
     <section class="tab" id="tab-logs">
       <div class="grid">
         <div class="card">
-          <h3>Record New Grade</h3>
+          <h3>Grade Records</h3>
           <div id="grade-error" class="error"></div>
-          <form id="grade-form" style="background: transparent; border: none; padding: 0; grid-template-columns: 1fr;">
-            <select id="grade-student" required></select>
-            <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 12px;">
-                <select id="grade-subject" required>
-                  <option value="">Select subject (auto-filters JHS/SHS)</option>
-                </select>
-                <select id="grade-component" required>
-                  <option value="">Component</option>
-                  <option value="WW">Written Work (WW)</option>
-                  <option value="PT">Performance Task (PT)</option>
-                  <option value="QA">Quarterly Assessment (QA)</option>
-                </select>
-            </div>
-            <input id="grade-activity" placeholder="Activity label (optional, e.g., Quiz 1)" />
-            <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(140px, 1fr)); gap: 12px;">
-                <input id="grade-ww" type="number" step="0.01" min="0" max="100" placeholder="Written Works %" />
-                <input id="grade-pt" type="number" step="0.01" min="0" max="100" placeholder="Performance Tasks %" />
-                <input id="grade-qa" type="number" step="0.01" min="0" max="100" placeholder="Quarterly Exam %" />
-                <input id="grade-value" type="number" step="0.01" min="0" max="100" placeholder="Final Grade (auto)" readonly style="background: rgba(255,255,255,0.05);" />
-                <div id="grade-weights" style="font-size: 12px; color: var(--muted); grid-column: 1 / -1;">Weights: -</div>
-            </div>
-            <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 12px;">
-                <input id="grade-date" type="date" />
-            </div>
-            <button type="submit">Submit Grade</button>
-          </form>
-        </div>
-      </div>
-      <div class="grid">
-        <div class="card">
-          <h3>Recent Grades</h3>
+          <div style="display:flex; flex-wrap:wrap; gap:12px; margin-bottom:12px;">
+            <select id="grade-student" style="min-width:180px;"></select>
+            <select id="grade-subject" style="min-width:200px;">
+              <option value="">All subjects</option>
+            </select>
+            <select id="grade-component" style="min-width:160px;">
+              <option value="">All components</option>
+              <option value="WW">Written Work</option>
+              <option value="PT">Performance Task</option>
+              <option value="QA">Quarterly Assessment</option>
+            </select>
+            <button id="grade-refresh" type="button" style="background: var(--accent); border:none; padding:10px 16px; border-radius:10px; color:white;">Refresh</button>
+          </div>
           <div style="display:flex; gap:8px; align-items:center; margin-bottom:8px; flex-wrap:wrap;">
             <select id="report-student" style="min-width:180px;"></select>
             <button id="grade-report-btn" type="button">Download Student PDF</button>
           </div>
           <table id="grades-table">
-            <thead><tr><th>Student</th><th>Subject</th><th>Assessment</th><th>Grade</th><th>Date</th></tr></thead>
+            <thead><tr><th>Student</th><th>Subject</th><th>Assessment</th><th>Component</th><th>Raw</th><th>Max</th><th>Grade %</th><th>Date</th></tr></thead>
             <tbody></tbody>
           </table>
         </div>
@@ -1094,26 +1076,30 @@
     }
 
     function computeSheetFinals() {
-      const subjectName = document.getElementById("sheet-subject").value;
+      const subjectName = gradeSheetSubject || document.getElementById("sheet-subject").value;
       const subjectMeta = subjectsCache.find(s => s.name === subjectName);
-      const band = subjectMeta?.level_band;
-      const weights = getWeightsForSubject(subjectName, subjectMeta, band);
+      const weights = subjectMeta ? {
+        ww: Number(subjectMeta.weight_ww || 0),
+        pt: Number(subjectMeta.weight_pt || 0),
+        qa: Number(subjectMeta.weight_qa || 0),
+      } : gradeSheetSubjectWeights;
       gradeSheetRows.forEach(row => {
-        const wwScores = [], ptScores = [], qaScores = [];
+        let wwRaw = 0, wwMax = 0, ptRaw = 0, ptMax = 0, qaRaw = 0, qaMax = 0;
         gradeSheetActivities.forEach(act => {
           const v = Number(row.scores[act.id]);
-          if (isNaN(v)) return;
-          if (act.type === "WW") wwScores.push(v);
-          if (act.type === "PT") ptScores.push(v);
-          if (act.type === "QA") qaScores.push(v);
+          const mx = Number(act.max_score || 0);
+          if (isNaN(v) || isNaN(mx)) return;
+          if (act.type === "WW") { wwRaw += v; wwMax += mx; }
+          if (act.type === "PT") { ptRaw += v; ptMax += mx; }
+          if (act.type === "QA") { qaRaw += v; qaMax += mx; }
         });
-        const avg = arr => arr.length ? arr.reduce((a,b)=>a+b,0)/arr.length : 0;
-        const wwAvg = avg(wwScores);
-        const ptAvg = avg(ptScores);
-        const qaAvg = avg(qaScores);
+        const pct = (raw, mx) => mx > 0 ? (raw / mx) * 100 : 0;
+        const wwPct = pct(wwRaw, wwMax);
+        const ptPct = pct(ptRaw, ptMax);
+        const qaPct = pct(qaRaw, qaMax);
         let final = "";
         if (weights) {
-          final = ((wwAvg * weights.ww) + (ptAvg * weights.pt) + (qaAvg * weights.qa)) / 100;
+          final = ((wwPct * weights.ww) + (ptPct * weights.pt) + (qaPct * weights.qa));
           final = isNaN(final) ? "" : final.toFixed(2);
         }
         row.final = final;
@@ -1169,15 +1155,31 @@
       gradesCache = grades;
       const tbody = document.querySelector("#grades-table tbody");
       tbody.innerHTML = "";
-      const byBand = (currentUser?.role === "Teacher" && teacherBand)
-        ? grades.filter(g => {
-            const s = studentsCache.find(st => st.id === g.student_id);
-            return classifyGradeLevel(s?.grade_level) === teacherBand;
-          })
-        : grades;
-      byBand.slice(0, 25).forEach(g => {
+      const studentFilter = Number(document.getElementById("grade-student").value) || null;
+      const subjectFilter = document.getElementById("grade-subject").value || "";
+      const compFilter = document.getElementById("grade-component").value || "";
+      const filtered = grades.filter(g => {
+        if (studentFilter && g.student_id !== studentFilter) return false;
+        if (subjectFilter && g.subject !== subjectFilter) return false;
+        if (compFilter && g.component !== compFilter) return false;
+        if (currentUser?.role === "Teacher" && teacherBand) {
+          const s = studentsCache.find(st => st.id === g.student_id);
+          if (classifyGradeLevel(s?.grade_level) !== teacherBand) return false;
+        }
+        return true;
+      });
+      filtered.slice(0, 200).forEach(g => {
+        const st = studentsCache.find(s => s.id === g.student_id);
+        const studentName = st ? `${st.first_name} ${st.last_name}` : g.student_id;
         const tr = document.createElement("tr");
-        tr.innerHTML = `<td>${g.student_id}</td><td>${g.subject}</td><td>${g.assessment}</td><td>${g.grade_value}</td><td>${g.recorded_on}</td>`;
+        tr.innerHTML = `<td>${studentName}</td>
+                        <td>${g.subject}</td>
+                        <td>${g.assessment}</td>
+                        <td>${g.component || "-"}</td>
+                        <td>${g.raw_score ?? "-"}</td>
+                        <td>${g.max_score ?? "-"}</td>
+                        <td>${g.grade_value ?? "-"}</td>
+                        <td>${g.recorded_on}</td>`;
         tbody.appendChild(tr);
       });
     }
@@ -1481,31 +1483,6 @@
         } catch (ex) { err.textContent = ex.message; }
       });
 
-      document.getElementById("grade-form").addEventListener("submit", async (e) => {
-        e.preventDefault();
-        const err = document.getElementById("grade-error");
-        err.textContent = "";
-        const payload = {
-          student_id: Number(document.getElementById("grade-student").value),
-          subject: document.getElementById("grade-subject").value.trim(),
-          assessment: (document.getElementById("grade-activity").value.trim() ||
-                       document.getElementById("grade-component").value ||
-                       "Assessment"),
-          grade_value: Number(document.getElementById("grade-value").value),
-          recorded_on: document.getElementById("grade-date").value || undefined,
-          recorded_by: user?.id,
-        };
-        if (!payload.student_id) { err.textContent = "Select a student."; return; }
-        if (!payload.subject) { err.textContent = "Select a subject."; return; }
-        if (!document.getElementById("grade-component").value) { err.textContent = "Select a component."; return; }
-        try {
-          await fetchJSON("/grades", { method: "POST", body: JSON.stringify(payload) });
-          e.target.reset();
-          document.getElementById("grade-component").value = "";
-          await refreshAll();
-        } catch (ex) { err.textContent = ex.message; }
-      });
-
       document.getElementById("attendance-form").addEventListener("submit", async (e) => {
         e.preventDefault();
         const err = document.getElementById("attendance-error");
@@ -1660,6 +1637,10 @@
       const reportBtn = document.getElementById("grade-report-btn");
       if (reportBtn) {
         reportBtn.addEventListener("click", () => downloadStudentReport());
+      }
+      const gradeRefresh = document.getElementById("grade-refresh");
+      if (gradeRefresh) {
+        gradeRefresh.addEventListener("click", () => loadGradesTable());
       }
 
       const sheetBand = document.getElementById("sheet-band");
